# ai-learning

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
docs/: index.md  nlp.md
nlp/: index.html
search/: search_index.json
src/ai_learning/: logger_config.py
src/ai_learning/nlp/: nlp.py  removing_stropwords.py
tests/: test_nlp.py
