[project]
name = "ai-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "prabhu",email = "prabhu.mc2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)"
]

[tool.poetry]
packages = [{include = "ai_learning", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
